# tt

./: CURSOR.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
prds/: github-actions-v4.md  initial-structure-v1.md  list-behaviour-v2.md  persistence-v3.md  priorities-v5.md
src/: cli.rs  main.rs  todo_manager.rs
src/models/: mod.rs  todo.rs
